--- a/Control-flow-and-defining-functions.ipynb
+++ b/Control-flow-and-defining-functions.ipynb
@@ -28,9 +28,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c371e04d-2ee7-486d-8c66-b1862fab4019",
+   "id": "c7a97b27-ef65-4e33-b2fe-424f9e2d75b2",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "c371e04d-2ee7-486d-8c66-b1862fab4019",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 is positive\n"
+     ]
+    }
+   ],
    "source": [
     "# Check if a number is positive\n",
     "number = 5  # Initialize the variable\n",
@@ -54,14 +70,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b7f70050-56eb-445a-a620-e4905e546596",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-3 is negative\n"
+     ]
+    }
+   ],
    "source": [
     "number = -3  # You can change this to test different numbers\n",
     "\n",
-    "# Write an if block to check if the number is positive\n"
+    "# Write an if block to check if the number is positive\n",
+    "if number > 0:\n",
+    "    print (f\"{number} is positive\")\n",
+    "else:\n",
+    "    print(f\"{number} is negative\")"
    ]
   },
   {
@@ -92,10 +120,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "8b8c4bcb-8304-476d-a99e-4e3c628f7ece",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-2 is negative\n"
+     ]
+    }
+   ],
    "source": [
     "# Check if a number is positive or negative\n",
     "number = -2  # Initialize the variable\n",
@@ -121,14 +157,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "dd76de9c-6807-4c6d-8497-805e0f5bdb88",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 is positive\n"
+     ]
+    }
+   ],
    "source": [
-    "number = 0  # Try different numbers, including negative numbers\n",
+    "number = -2  # Try different numbers, including negative numbers\n",
     "\n",
-    "# Write an if-else block to check if a number is negative; if it is, make the number positive\n"
+    "# Write an if-else block to check if a number is negative; if it is, make the number positive\n",
+    "if number > 0:\n",
+    "    print(f\"{number} is positive\")\n",
+    "else:\n",
+    "    number2 = number * -1\n",
+    "    print(f\"{number2} is positive\")"
    ]
   },
   {
@@ -159,10 +208,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "f91602ae-0f78-4f26-9c92-99ed0931dfa5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 is zero\n"
+     ]
+    }
+   ],
    "source": [
     "# Check if a number is positive, negative, or zero\n",
     "number = 0  # Initialize the variable\n",
@@ -194,14 +251,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "9d354f72-3e97-4640-b265-73338d7da628",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.183101550488765\n"
+     ]
+    }
+   ],
    "source": [
-    "number = 10  # Try different numbers, including negative and zero\n",
+    "number = 0.314159  # Try different numbers, including negative and zero\n",
     "\n",
-    "# Write an if-elif-else block to classify the number as described above\n"
+    "# Write an if-elif-else block to classify the number as described above\n",
+    "if number > 1:\n",
+    "    print(f\"{number}\")\n",
+    "elif number > 0:\n",
+    "    one_over = 1 / number\n",
+    "    print(f\"{one_over}\")\n",
+    "else:\n",
+    "    print(f\"Zero\")"
    ]
   },
   {
@@ -234,10 +306,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "77ea255b-5e33-4575-942a-c1f5173606b5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "# Print numbers from 1 to 5 using a while loop\n",
     "i = 1  # Initialize the loop variable\n",
@@ -262,15 +346,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "26ff297a-bb57-43ee-8cc2-b2381e1c0073",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize the loop variable\n",
-    "i = 1  # Start at 1\n",
+    "i = 2  # Start at 1\n",
     "\n",
-    "# Write a while loop to print only even numbers between 1 and 10\n"
+    "# Write a while loop to print only even numbers between 1 and 10\n",
+    "while i <= 10:\n",
+    "    print(i)\n",
+    "    i += 2"
    ]
   },
   {
@@ -296,10 +395,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "873b4670-2d88-45e7-97da-067ac53c3737",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "# Iterate over a list of numbers\n",
     "numbers = [1, 2, 3, 4, 5]  # Initialize a list of numbers\n",
@@ -324,15 +435,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "8338c319-7bdc-4993-a5dd-56658ec33339",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'list' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[33], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Write a for loop to calculate the sum of the list\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m number \u001b[38;5;129;01min\u001b[39;00m numbers:\n\u001b[0;32m----> 6\u001b[0m     Sum \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43msum\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mnumbers\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;28mprint\u001b[39m(Sum)\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'list' object is not callable"
+     ]
+    }
+   ],
    "source": [
     "# Initialize the list of numbers\n",
     "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]   \n",
     "\n",
-    "# Write a for loop to calculate the sum of the list\n"
+    "# Write a for loop to calculate the sum of the list\n",
+    "for number in numbers:\n",
+    "    Sum = sum(numbers)\n",
+    "    print(Sum)"
    ]
   },
   {
@@ -352,10 +478,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "2b0a277e-a7d6-4621-86df-410cadd4638d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "# Use break to exit the loop early\n",
     "numbers = [1, 2, 3, 4, 5]\n",
@@ -413,7 +548,7 @@
     "# Initialize the list of numbers\n",
     "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
     "\n",
-    "# Write a for loop with continue to skip numbers divisible by 3"
+    "# Write a for loop with continue to skip numbers divisible by 3\n"
    ]
   },
   {
@@ -480,10 +615,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6f60fece-1404-4410-8ce5-99f0833c63e3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum: 8\n"
+     ]
+    }
+   ],
    "source": [
     "# Define a function to add two numbers\n",
     "def add_numbers(a, b):\n",
@@ -574,7 +717,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.9.20"
   }
  },
  "nbformat": 4,
