--- a/numpy-basics.ipynb
+++ b/numpy-basics.ipynb
@@ -400,10 +400,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5ec90d6a-bf5d-4dce-89fe-d82dacd67924",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix:\n",
+      " [[1 2]\n",
+      " [3 4]]\n",
+      "\n",
+      "Inverse of the Matrix:\n",
+      " [[-2.   1. ]\n",
+      " [ 1.5 -0.5]]\n",
+      "\n",
+      "Determinant of the Matrix:\n",
+      " -2.0000000000000004\n",
+      "\n",
+      "Eigenvalues:\n",
+      " [-0.37228132  5.37228132]\n",
+      "\n",
+      "Eigenvectors:\n",
+      " [[-0.82456484 -0.41597356]\n",
+      " [ 0.56576746 -0.90937671]]\n",
+      "\n",
+      "Solution to the system Ax = b:\n",
+      " [2. 3.]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -458,7 +485,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.9.20"
   }
  },
  "nbformat": 4,
